fix claude request synthesis